log/build_2025-03-11_14-48-03/robo24_stuff/stderr.log
  File "/home/mike/roborama25_ws/install/robo24_stuff/lib/python3.10/site-packages/robo24_stuff/sensor_serial_node.py", line 74
    for i in range(1:num_data):
                    ^
SyntaxError: invalid syntax

